--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 bytemuck = "1.12.3"
 env_logger = "0.10.0"
+image = "0.24.5"
 log = "0.4.17"
 pollster = "0.2.5"
 wasm-bindgen = "0.2.83"
